cmake_minimum_required(VERSION 3.28)
project(CppSeries)

set(CMAKE_CXX_STANDARD 17)

add_executable(CppSeries main.cpp
        Log.cpp
        Math.cpp
        EndBrace.h
        Variables.cpp
        Conditionals.cpp
        Log.h
        Pointers.cpp
        References.cpp
        Classes.cpp
        Class01.cpp
        StaticMain.cpp
        Static.cpp
        Enums.cpp
        Constructors.cpp
        Inheritance.cpp
        VirtualFunctions.cpp
        Arrays.cpp
        Strings.cpp
        StringLiterals.cpp
        Convert.cpp
)
